--- a/nginx/conf.d/grafana_private.conf
+++ b/nginx/conf.d/grafana_private.conf
@@ -17,3 +17,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+cat > /opt/citadel/nginx/conf.d/grafana_private.conf <<'EOF'
+# (paste grafana_private.conf contents)
+EOF
