Update and rename public_grafana.conf to grafana_public.conf

--- a/nginx/conf.d/grafana_public.conf
+++ b/nginx/conf.d/grafana_public.conf
@@ -1,3 +1,4 @@
+
 # -------------------------------------------------
 # Public Grafana – anonymous read‑only – HTTPS
 # -------------------------------------------------
@@ -17,3 +18,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
+cat > citadel/nginx/conf.d/grafana_public.conf <<'EOF'
+# (paste grafana_public.conf contents)
+EOF
