--- a/nginx/conf.d/grafana_public.conf
+++ b/nginx/conf.d/grafana_public.conf
@@ -19,6 +19,6 @@ server {
     }
 }
 
-cat > citadel/nginx/conf.d/grafana_public.conf <<'EOF'
+cat > citadel-quantum-trader/nginx/conf.d/grafana_public.conf <<'EOF'
 # (paste grafana_public.conf contents)
 EOF
