--- a/nginx/conf.d/grafana_private.conf
+++ b/nginx/conf.d/grafana_private.conf
@@ -18,6 +18,6 @@ server {
     }
 }
 
-cat > /opt/citadel/nginx/conf.d/grafana_private.conf <<'EOF'
+cat > citadel-quantum-trader/nginx/conf.d/grafana_private.conf <<'EOF'
 # (paste grafana_private.conf contents)
 EOF
