--- a/nginx/conf.d/admin_ui.conf
+++ b/nginx/conf.d/admin_ui.conf
@@ -57,7 +57,7 @@ location /heatmaps/ {
     autoindex on;                   # optional directory listing
     add_header Cache-Control "no-store";
 }
- cat > /opt/citadel/nginx/conf.d/admin_ui.conf <<'EOF'
+ cat > citadel-quantum-trader/nginx/conf.d/admin_ui.conf <<'EOF'
 # (paste admin_ui.conf contents)
 EOF
 
