--- a/requirements.txt
+++ b/requirements.txt
@@ -83,4 +83,10 @@ lightgbm==4.3.0          # latest stable at time of writing
 scikit-learn>=1.3.0      # for train_test_split, metrics, etc.
 joblib>=1.3.0            # for model persistence (optional)
 
+opentelemetry-api==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-instrumentation==0.44b0
+opentelemetry-exporter-otlp==1.24.0
+opentelemetry-instrumentation-asyncio==0.44b0
+
 
