--- a/alerts/alertmanager.yml
+++ b/alerts/alertmanager.yml
@@ -176,3 +176,33 @@ groups:
       - url: http://citadel-bot:8000/api/v1/kill_switch   # internal network address
         send_resolved: true
 
+global:
+  resolve_timeout: 5m
+
+route:
+  receiver: slack-notifications
+  group_by: ['alertname', 'instance']
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 4h
+
+receivers:
+  - name: slack-notifications
+    slack_configs:
+      - api_url: https://hooks.slack.com/services/XXX/YYY/ZZZ
+        channel: '#citadel-alerts'
+        send_resolved: true
+        title: "{{ .CommonAnnotations.summary }}"
+        text: |
+          {{ .CommonAnnotations.description }}
+
+# -------------------------------------------------
+# Silence groups (example)
+# -------------------------------------------------
+inhibit_rules:
+  - source_match:
+      severity: "critical"
+    target_match:
+      severity: "warning"
+    equal: ["alertname", "instance"]
+
