--- a/src/config.yaml
+++ b/src/config.yaml
@@ -280,3 +280,7 @@ class Config:
         # 2️⃣  Choose the DB schema (default = public)
         # -----------------------------------------------------------------
         self.settings['db_schema'] = os.getenv('DB_SCHEMA', 'public')
+
+        baseline_portfolio_atr: 0.005   # 0.5 % of equity (tune after first week)
+max_drawdown_cap: 0.20         # static cap = 20 %
+
