--- a/docker‑compose.yml
+++ b/docker‑compose.yml
@@ -960,3 +960,18 @@ services:
   networks:
     - backend
 
+# -------------------------------------------------
+# 10️⃣ Jaeger – distributed tracing backend
+# -------------------------------------------------
+jaeger:
+  image: jaegertracing/all-in-one:1.53
+  container_name: citadel-jaeger
+  environment:
+    COLLECTOR_ZIPKIN_HTTP_PORT: 9411   # optional Zipkin compatibility
+  ports:
+    - "6831:6831/udp"   # UDP port used by the JaegerExporter (default)
+    - "16686:16686"     # Jaeger UI
+  networks:
+    - backend
+  restart: unless-stopped
+
