--- a/src/config.yaml
+++ b/src/config.yaml
@@ -281,6 +281,32 @@ class Config:
         # -----------------------------------------------------------------
         self.settings['db_schema'] = os.getenv('DB_SCHEMA', 'public')
 
+        import os
+import yaml
+from pathlib import Path
+
+def load_config() -> dict:
+    """
+    Load the YAML config that drives the bot.
+    If the env‑var USE_OPTIMISED_CFG=true the loader swaps the
+    default config file for the new, optimised one.
+    """
+    use_opt = os.getenv("USE_OPTIMISED_CFG", "false").lower() == "true"
+    cfg_path = Path("/opt/citadel/config")
+    cfg_file = cfg_path / ("config_opt.yml" if use_opt else "config.yml")
+
+    if not cfg_file.is_file():
+        raise FileNotFoundError(f"Configuration file missing: {cfg_file}")
+
+    with cfg_file.open("r", encoding="utf-8") as f:
+        cfg = yaml.safe_load(f)
+
+    # Optional sanity‑check (already in the validator)
+    if not isinstance(cfg, dict):
+        raise ValueError("Config must be a mapping")
+    return cfg
+
+
         baseline_portfolio_atr: 0.005   # 0.5 % of equity (tune after first week)
 max_drawdown_cap: 0.20         # static cap = 20 %
 
